# bot-starter-v2

./: .env.example  .gitignore  .pre-commit-config.yaml  BLACK_COMPATIBILITY.md  DEVELOPMENT_GUIDE.md  Makefile  README.md  REFACTORING_REPORT.md  config.py  format_code.py  main.py  pyproject.toml  requirements.txt  setup_dev.py  simple_test_runner.py  test_precommit.py
application/: __init__.py
application/di_config/: __init__.py  setup.py  simple_setup.py
application/facade/: __init__.py  application_facade.py
application/handlers/: __init__.py  registry_init.py  router.py
application/services/: __init__.py  user_service.py  user_utils.py  validation_error_service.py
application/types/: __init__.py  user.py
business/: __init__.py
business/docs/: README.md  examples.md  handlers.md  services.md
business/handlers/: README.md  __init__.py  language_handlers.py  questionnaire_handlers.py  registry_init.py  router.py  user_handlers.py
business/protocols/: __init__.py  questionnaire.py
business/services/: __init__.py  api_client.py  greeting.py  help_service.py  interfaces.py  localization.py  question_provider.py  questionnaire_service.py  session_manager.py
business/states/: __init__.py  questionnaire_states.py
core/: __init__.py
core/di/: __init__.py  container.py  protocols.py
core/docs/: README.md  handlers.md  middleware.md  utils.md
core/facade/: __init__.py  application_facade.py
core/handlers/: __init__.py  decorators.py  protocols.py  registry.py  types.py
core/middleware/: __init__.py  callback_middleware.py  facade_middleware.py  localization_middleware.py  logging_middleware.py
core/protocols/: __init__.py  base.py  entities.py
core/questionnaire/: __init__.py  decorators.py  protocols.py  states.py  types.py
core/sequence/: __init__.py  decorators.py  factories.py  protocols.py  states.py  types.py
core/services/: __init__.py  localization.py
core/utils/: __init__.py  context_utils.py  date_validator.py  logger.py
dev-tools/: __init__.py  format_code.py  setup_dev.py  test_runner.py
docs/: ARCHITECTURE.md  architecture.puml  contributing.md  localization.md
handlers/: __init__.py  user_handlers.py
infrastructure/: __init__.py
infrastructure/api/: __init__.py  client.py
infrastructure/sequence/: __init__.py  context_aware_translator.py  factory.py  manager.py  provider.py
infrastructure/ui/: __init__.py  button_question_renderer.py
locales/: en.json  es.json  ru.json
middlewares/: __init__.py  logging_middleware.py
tests/: __init__.py  conftest.py  test_architectural_refactoring.py  test_integration.py  test_sequence_services.py
tests/application/: __init__.py  test_user_service.py
tests/architecture/: __init__.py  (+2 more)
utils/: __init__.py
(+75 files in other folders)
